2014-01-21 1.0.2 Fix for daylight saving time (#9)
                 Recurrent fix & retry on failed ffmpeg records (#10)
                 
2014-11-23 1.0.1 XMLTV generator 'TVH_W' supported

2014-09-01 1.0.0 Mobile version for record management 
                 Auto redirect for iOS and Android Mobile
                 Full Python 2.6.6/2.7/3 support
                 Better unicode support
                 Enhanced performance and memory usage for XMLTV                 
                 Refactoring and cleaning up
                 Bug fixes

2014-04-26 0.6.4 Password protection on remote connections added
                 Browsing for target folder selection added
                 Record name mask added
                 New manual and About page
 
2014-04-06 0.6.3 Recurrent records hotfix
 
2014-03-27 0.6.2 UI redesign and theme roller
                 Added english, german and russian translations (excl. About page)
                 jQuery date/time locale support also for other countries
                 Massive refactoring and fixes for client code
                 Table state saving in browser cache

2014-02-23 0.5.8 TVxb support
                 Structured config page with built-in plausibility control
                 Disable channels from EPG chart
                 Switch between client and server sided EPG list for besser compatibility
                 Automatic XMLTV import implemented

2014-02-01 0.5.7 Table length will be saved
                 Plausibility check for server port and bind address added
                 Gear icon in Chrome fixed
                 Synology shortcut fixes
                 Channel URL length increased to 255
                 Small playlist fixes

2013-12-22 0.5.6 Favicon added
                 Menu icons added
                 Few fixes on XMLTV

2013-12-11 0.5.5 Installation bug, sorry!!

2013-12-10 0.5.4 EPG removal bug fixed

2013-11-20 0.5.3 EPG view is now configurable. Please check the 'Config' page for this option